fixed spacing for search

--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ ul {
 }
 
 #logo {
-  margin-top: 3em;
+  margin-top: 2.1em;
 
   text-align: center;
   font-size: 5em;
